--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 <p class="text"> Chihiro chega a um mundo mágico dominado por uma bruxa. Aqueles que a desobedecem são
                     transformados em animais. </p>
                 <div class="btn-view d-flex justify-content-start justify-content-md-evenly">
-                    <button class="btn-watch">
+                    <a href="https://www.netflix.com/br/title/60023642" target="_blank" class="btn-watch">
                         <img src="./assets/images/play.png" alt="Play"> Assistir agora
-                    </button>
-                    <button class="btn-trailer d-none d-md-block">
+                    </a>
+                    <a href="https://youtu.be/SgZI655GgHk" target="_blank" class="btn-trailer d-none d-md-block">
                         assista o trailer
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-md-6 ghost-view">
